--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # Link auf die Datenbank. Diese Angabe ist später anzupassen für die DBs der Projekte (Ausdruck hinter dem Slash)
-spring.datasource.url=jdbc:postgresql://dumbo.inf.h-brs.de/demouser
+spring.datasource.url=jdbc:postgresql://dumbo.inf.h-brs.de:5432/wi_projekt_mahbobi_ws2022 
 
 # Username und Password. Diese Angaben sind durch die Projekte anzupassen. Daten bei Hr. Alda per E-Mail anfordern!
-spring.datasource.username=demouser
-spring.datasource.password=demouser
+spring.datasource.username=tkeppe2s
+spring.datasource.password=tkeppe2s
 
 # Name des Treibers für das DBMS PostgreSQL
 spring.datasource.driver-class-name=org.postgresql.Driver
