--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Angaben zur Aktualisierung des DB-Schemas. Sollte erst mal auf 'none' stehen, weitere Parameter möglich
 spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
