create:  all entitys from ER-diagram

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
 # Link auf die Datenbank. Diese Angabe ist später anzupassen für die DBs der Projekte (Ausdruck hinter dem Slash)
 spring.datasource.url=jdbc:postgresql://dumbo.inf.h-brs.de:5432/wi_projekt_mahbobi_ws2022 
-
 # Username und Password. Diese Angaben sind durch die Projekte anzupassen. Daten bei Hr. Alda per E-Mail anfordern!
 spring.datasource.username=tkeppe2s
 spring.datasource.password=tkeppe2s
-
 # Name des Treibers für das DBMS PostgreSQL
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-# Angaben zur Aktualisierung des DB-Schemas. Sollte erst mal auf 'none' stehen, weitere Parameter möglich
-spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=create-drop
+#ture -> auto creates table from entity Classes(Only use if you want to create new entitys!) ALL DATA WILL BE ERASED!!!
+# false -> doesn't create ddl from entity classes
+spring.jpa.generate-ddl=false 
+spring.jpa.hibernate.ddl-auto=none
