--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,13 @@
           <version>5.7.0</version>
           <scope>test</scope>
         </dependency>
-            
+        
+        <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.18.24</version>
+          <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
