add: mapstruck dependency

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <java.version>11</java.version>
         <vaadin.version>14.4.7</vaadin.version>
         <org.jetbarins.annotations.version>23.0.0</org.jetbarins.annotations.version>
+        <org.mapstruct.version>1.5.3.Final</org.mapstruct.version>
     </properties>
 
     <dependencies>
@@ -103,6 +104,11 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+          <groupId>org.mapstruct</groupId>
+          <artifactId>mapstruct</artifactId>
+          <version>${org.mapstruct.version}</version>
+      </dependency>
     </dependencies>
 
     <dependencyManagement>
@@ -132,6 +138,23 @@
                     <target>10</target>
                 </configuration>
             </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <version>3.8.1</version>
+              <configuration>
+                  <source>1.8</source> <!-- depending on your project -->
+                  <target>1.8</target> <!-- depending on your project -->
+                  <annotationProcessorPaths>
+                      <path>
+                          <groupId>org.mapstruct</groupId>
+                          <artifactId>mapstruct-processor</artifactId>
+                          <version>${org.mapstruct.version}</version>
+                      </path>
+                      <!-- other annotation processors -->
+                  </annotationProcessorPaths>
+              </configuration>
+          </plugin>
         </plugins>
     </build>
 
