--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,9 @@
         <java.version>11</java.version>
         <vaadin.version>14.4.7</vaadin.version>
         <org.jetbarins.annotations.version>23.0.0</org.jetbarins.annotations.version>
+        <org.projectlombok.version>1.18.24</org.projectlombok.version>
         <org.mapstruct.version>1.5.3.Final</org.mapstruct.version>
+        <lombok.mapstruct-binding.version>0.2.0</lombok.mapstruct-binding.version>
     </properties>
 
     <dependencies>
@@ -95,7 +97,7 @@
         <dependency>
           <groupId>org.projectlombok</groupId>
           <artifactId>lombok</artifactId>
-          <version>1.18.24</version>
+          <version>${org.projectlombok.version}</version>
           <scope>provided</scope>
         </dependency>
         <dependency>
@@ -143,13 +145,23 @@
               <artifactId>maven-compiler-plugin</artifactId>
               <version>3.8.1</version>
               <configuration>
-                  <source>1.8</source> <!-- depending on your project -->
-                  <target>1.8</target> <!-- depending on your project -->
+                  <source>11</source> <!-- depending on your project -->
+                  <target>11</target> <!-- depending on your project -->
                   <annotationProcessorPaths>
                       <path>
                           <groupId>org.mapstruct</groupId>
                           <artifactId>mapstruct-processor</artifactId>
                           <version>${org.mapstruct.version}</version>
+                      </path>
+                      <path>
+                          <groupId>org.projectlombok</groupId>
+                          <artifactId>lombok</artifactId>
+                          <version>${org.projectlombok.version}</version>
+                      </path>
+                      <path>
+                          <groupId>org.projectlombok</groupId>
+                          <artifactId>lombok-mapstruct-binding</artifactId>
+                          <version>${lombok.mapstruct-binding.version}</version>
                       </path>
                       <!-- other annotation processors -->
                   </annotationProcessorPaths>
