--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.datasource.password=tkeppe2s
 spring.datasource.driver-class-name=org.postgresql.Driver
 #ture -> auto creates table from entity Classes(Only use if you want to create new entitys!) ALL DATA WILL BE ERASED!!!
 # false -> doesn't create ddl from entity classes
+# create-drop
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
