--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,10 @@
           <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
 
         <dependency>
           <groupId>org.mapstruct</groupId>
