--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # create-drop
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=wac.wram@gmail.com
+spring.mail.password=Projekt123
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
