--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
 
-spring.mail.host=smtp.gmail.com
+spring.mail.host=smtp.web.de
 spring.mail.port=587
-spring.mail.username=wac.wram@gmail.com
-spring.mail.password=Projekt123
+spring.mail.username=wac.wram@web.de
+spring.mail.password=WACProjekt1234
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.sm tp.starttls.enable=true
