--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.mail.host=smtp.web.de
 spring.mail.port=587
 spring.mail.username=wac.wram@web.de
 spring.mail.password=WACProjekt123
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
